@@ -3,6 +3,8 @@ Gaim: The Pimpin' Penguin IM Clone thats good for the soul!
 version 0.52:
 	* Better buddy icon transparency (thanks SeanEgan)
 	* Updated Polish Translation (thanks Przemyslaw Sulek)
+	* Fixed a little bug with connecting via proxy (thanks
+	  for reminding me of this, Manish Singh)
 
 version 0.51 (01/24/2002):
 	* Arrow buttons in log viewer and some other dialogs
